@@ -1,5 +1,8 @@
 2005-03-27 Shachar Shemesh
 	* Change the license to explicitly allow linking with OpenSSL
+	* Make new file permissions adhere to umask rather than source
+	  file.
+	* Fix bug in mkpath when trying to create rooted path
 
 Version 0.11
 2005-03-11 Shachar Shemesh
